--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
         <div class="grow-wrap">
           <textarea name="text" id="text"
             placeholder="Ingrese texto aquí"
+            autocapitalize="off"
             onInput="this.parentNode.dataset.replicatedValue = this.value"></textarea>
         </div>
 
